--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -2,68 +2,50 @@
 <html>
     <head>
     <title>Sketchpad</title>
-    
     <script type="text/javascript">
         // Variables for referencing the canvas and 2dcanvas context
         var canvas,ctx;
-    
         // Variables to keep track of the mouse position and left-button status 
         var mouseX,mouseY,mouseDown=0;
-    
         // Variables to keep track of the touch position
         var touchX,touchY;
-        
-        // Color Selector Function BEGINNING OF NEW CODE
-        const colorPicker = document.querySelector( '.js-color-picker');
-
-        colorPicker.addEventListener( 'change', event => {
-        cxt.strokeStyle = event.target.value; } );
-        // END OF NEW CODE
-
         // Draws a dot at a specific position on the supplied canvas name
         // Parameters are: A canvas context, the x position, the y position, the size of the dot
         function drawDot(ctx,x,y,size) {
-            // Let's use black by setting RGB values to 0, and 255 alpha (completely opaque)
-            r=0; g=0; b=0; a=255;
-    
-            // Select a fill style
-            //ctx.fillStyle = "rgba("+r+","+g+","+b+","+(a/255)+")";
-            ctx.fillStyle = event.target.value;
+            /// Color Selector Function:
+            const colorPicker = document.querySelector( '.js-color-picker');
+            colorPicker.addEventListener( 'change', event => {
+            ctx.fillStyle = event.target.value; } );
+            /// 
     
             // Draw a filled circle
             ctx.beginPath();
-            ctx.arc(x, y, size, 0, Math.PI*2, true); 
+            ctx.arc(x, y, 5, 0, Math.PI*2, true); 
             ctx.closePath();
             ctx.fill();
         } 
-    
         // Clear the canvas context using the canvas width and height
         function clearCanvas(canvas,ctx) {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
         }
-    
         // Keep track of the mouse button being pressed and draw a dot at current location
         function sketchpad_mouseDown() {
             mouseDown=1;
             drawDot(ctx,mouseX,mouseY,12);
         }
-    
         // Keep track of the mouse button being released
         function sketchpad_mouseUp() {
             mouseDown=0;
         }
-    
         // Keep track of the mouse position and draw a dot if mouse button is currently pressed
         function sketchpad_mouseMove(e) { 
             // Update the mouse co-ordinates when moved
             getMousePos(e);
-    
             // Draw a dot if the mouse button is currently being pressed
             if (mouseDown==1) {
                 drawDot(ctx,mouseX,mouseY,12);
             }
         }
-    
         // Get the current mouse position relative to the top-left of the canvas
         function getMousePos(e) {
             if (!e)
@@ -191,6 +173,8 @@
                  Draw something by tapping or dragging.<br/><br/>
                  Works on iOS, Android and desktop/laptop touchscreens using Chrome/Firefox/Safari.<br/><br/>
                  <input type="color"  class="js-color-picker  color-picker">
+                 <input type="range" class="js-line-range" min="1" max="72" value="1">
+				 <label class="js-range-value">1</label>
                  <input type="submit" value="Clear Sketchpad" id="clearbutton" onclick="clearCanvas(canvas,ctx);">
             </div>
             <div class="rightside">
@@ -201,6 +185,7 @@
     </body>
     </html>
     
+
 
 <html>
     <head>
