--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -173,8 +173,8 @@
                  Draw something by tapping or dragging.<br/><br/>
                  Works on iOS, Android and desktop/laptop touchscreens using Chrome/Firefox/Safari.<br/><br/>
                  <input type="color"  class="js-color-picker  color-picker">
-                 <input type="range" class="js-line-range" min="1" max="72" value="1">
-				 <label class="js-range-value">1</label>
+                 <!-- <input type="range" class="js-line-range" min="1" max="72" value="1">
+				 <label class="js-range-value">1</label>   -->
                  <input type="submit" value="Clear Sketchpad" id="clearbutton" onclick="clearCanvas(canvas,ctx);">
             </div>
             <div class="rightside">
